get the right bibtex citation for phd UAB

--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -634,20 +634,47 @@
 		{Arqueologia}, {SIG} i modelització espacial del patró d'ocupació del
 		territori durant el {Neolític} (5700- 2100 cal {ANE})
 	},
-	author       = {Salvador Baiges, Guillem and Gassiot Ballbè, Ermengol},
+	author       = {Salvador Baiges, Guillem and Gassiot Ballbè, Ermengol, dir.},
 	year         = 2024,
 	url          = {https://ddd.uab.cat/record/301073},
-	urldate      = {2025-03-31},
-	type         = {phd},
-	language     = {cat},
+	type         = {PhD Thesis},
+	abstract     = {
+		In recent decades, the Pyrenees have experienced an increase in
+		archaeological research that has made it possible to identify new sites with
+		Neolithic chronology in different parts of the mountain range, in some cases
+		with signs of agricultural practices. These new archaeological data have
+		begun to fill gaps in knowledge in a context in which, until the end of the
+		20th century, the Balma Margineda was practically the only known Neolithic
+		site in the Pyrenees, and in the knowledge of the first agricultural and
+		livestock farming communities that inhabited the mountain range. These new
+		studies allow us to question and propose new alternative scenarios to the
+		historical and traditional views that have considered mountain environments
+		such as the Pyrenees as marginal areas and only frequented by seasonal
+		livestock farming groups during the summer. Based on this issue, this
+		doctoral thesis aims to contribute to the knowledge of the introduction of
+		agricultural and livestock practices of these first human groups, from a
+		geographical perspective of the territory. In other words, it aims to
+		spatially contextualize the settlements and analyses how the different land
+		occupation patterns were configured throughout the Neolithic period (5700 -
+		2100 cal BCE), applying different methods and techniques of Geographic
+		Information Systems. Two aspects have been taken into account to define the
+		land occupation patterns. On the one hand, several orographic and
+		palaeoclimatic variables have been processed and analyzed in order to
+		identify the geographical parameters and contexts in which the Neolithic
+		settlements are located. On the other hand, the agricultural potential of the
+		Pyrenees has been spatially modelled, taking into account the requirements of
+		different crops and agricultural systems to test the viability of agriculture
+		during the different phases of the Neolithic in the different areas of the
+		Pyrenees. These methodological developments have made it possible to identify
+		two settlement location patterns. The first is associated with the first
+		Neolithic occupations with a mixed and diversified economy, with settlements
+		linked to areas accessible to land with agricultural potential. On the other
+		hand, the second pattern is related to the Late Neolithic/Chalcolithic
+		occupations, linked to a livestock use of the subalpine belts.
+	},
 	school       = {
 		Universitat Autònoma de Barcelona. Programa de Doctorat en Arqueologia
 		Prehistòrica
-	},
-	keywords     = {
-		Arqueología del Paisaje, Arqueologia del Paisatge, Ciències Humanes, GIS,
-		Landscape archaeology, literature, Neolithic, Neolític, Neolítico, SIG, Tesi
-		doctoral, TEXT
 	}
 }
 @phdthesis{wiethase_advancing_2023,
