--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -47,7 +47,7 @@
 }
 @article{hattendorf_dirofilaria_2025,
 	title        = {
-		\textit{{Dirofilaria}} immitis and {\textit{D}}. repens in {Europe}: a
+		\textit{{Dirofilaria} immitis} and \textit{{D.} {repens}} in {Europe}: a
 		systematic literature review on vectors, host range, and the spatial
 		distribution in the 20th and 21st century
 	},
@@ -132,7 +132,7 @@
 		Universitat Autònoma de Barcelona. Programa de Doctorat en Arqueologia
 		Prehistòrica
 	},
-	author       = {Salvador Baiges, Guillem and Gassiot Ballbè, Ermengol, dir.},
+	author       = {Salvador Baiges, Guillem and Gassiot Ballbè, Ermengol (dir.)},
 	year         = 2024,
 	keywords     = {
 		90, Arqueología del Paisaje, Arqueologia del Paisatge, Ciències Humanes, GIS,
@@ -582,8 +582,8 @@
 	},
 	url          = {https://arxiv.org/abs/2407.00791},
 	author       = {
-		Lindgren, Finn and Bachl, Fabian and Illian, Janine and Suen, Man Ho and
-		{Håvard Rue} and Seaton, Andrew E.
+		Lindgren, Finn and Bachl, Fabian and Illian, Janine and Suen, Man Ho and Rue,
+		Håvard and Seaton, Andrew E.
 	},
 	year         = 2024,
 	note         = {\_eprint: 2407.00791}
