--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -1,11 +1,11 @@
 @phdthesis{wiethase_advancing_2023,
-	type         = {phd},
+	type         = {PhD thesis},
 	title        = {
 		Advancing ecosystem understanding: {Identifying} the drivers of habitat
 		degradation, species distributions and species vulnerabilities in {East}
 		{African} grasslands.
 	},
-	copyright    = {cc\_by\_nc\_nd\_4},
+	copyright    = {http://creativecommons.org/licenses/by-nc-nd/4.0/},
 	shorttitle   = {Advancing ecosystem understanding},
 	url          = {https://etheses.whiterose.ac.uk/id/eprint/34736/},
 	abstract     = {
@@ -43,7 +43,8 @@
 	school       = {University of York},
 	author       = {Wiethase, Joris Hendrik},
 	month        = dec,
-	year         = 2023
+	year         = 2023,
+	note         = {Unpublished}
 }
 @article{hattendorf_dirofilaria_2025,
 	title        = {
@@ -82,8 +83,7 @@
 	author       = {Hattendorf, Carolin and Lühken, Renke},
 	year         = 2025,
 	note         = {
-		Publisher: Cold Spring Harbor Laboratory \_eprint:
-		https://www.biorxiv.org/content/early/2025/02/18/2025.02.17.638693.full.pdf
+		Publisher: Cold Spring Harbor Laboratory
 	}
 }
 @phdthesis{salvador_baiges_clima_2024,
