--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -719,3 +719,24 @@
 	keywords     = {Beaver, Biomagnification, Fisher, Hepatic, Methylmercury, Otter},
 	pages        = 179186
 }
+
+@article{williams_ecosystem_2025,
+	title        = {
+		Ecosystem condition emerges from an ecological equation of state applied to
+		{North} {American} tree communities
+	},
+	author       = {Williams, Jake and Pettorelli, Nathalie},
+	year         = 2025,
+	month        = apr,
+	journal      = {Current Biology},
+	volume       = 35,
+	number       = 7,
+	pages        = {1672--1679.e3},
+	doi          = {10.1016/j.cub.2025.02.062},
+	issn         = {09609822},
+	url          = {https://linkinghub.elsevier.com/retrieve/pii/S0960982225002763},
+	urldate      = {2025-04-12},
+	language     = {en}
+}
+
+
