--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -791,5 +791,58 @@
 	},
 	eprint       = {https://www.biorxiv.org/content/early/2025/04/08/2025.04.03.647025.full.pdf}
 }
+@article{coffey_spatial_2025,
+	title        = {
+		The spatial distribution of a hummingbird‐pollinated plant is not strongly
+		influenced by hummingbird abundance
+	},
+	author       = {Coffey, Matthew L. and Simons, Andrew M.},
+	year         = 2025,
+	month        = apr,
+	journal      = {American Journal of Botany},
+	pages        = {e70034},
+	doi          = {10.1002/ajb2.70034},
+	issn         = {0002-9122, 1537-2197},
+	url          = {https://bsapubs.onlinelibrary.wiley.com/doi/10.1002/ajb2.70034},
+	urldate      = {2025-04-27},
+	abstract     = {
+		Abstract
+
+		Premise
+
+		Many angiosperms have evolved specialized systems that promote pollination by
+		specific taxa. Therefore, plant distributions may be limited by the local
+		abundance of their specialist pollinators. In eastern North America, Lobelia
+		cardinalis is thought to be pollinated solely by Archilochus colubris , the
+		only hummingbird species found in the region. Here we tested the hypothesis
+		that the distribution of a plant species with specialized pollination is
+		controlled by the range and abundance of its specialist pollinator.
+
+		Methods
+
+		We investigated the importance of A. colubris abundance, sourced from eBird,
+		as a variable in a MaxEnt species distribution model of L. cardinalis using
+		presence data from iNaturalist. We also compared hummingbird abundance
+		between locations of L. cardinalis and congeneric during their respective
+		flowering periods and explored whether the flowering periods of L. cardinalis
+		and congenerics align with the week of peak local hummingbird abundance.
+
+		Results
+
+		Unexpectedly, MaxEnt modelling did not suggest that A. colubris abundance is
+		a key driver of the species distribution. Lobelia cardinalis habitat
+		suitability was lowest in the absence of A. colubris and increased with
+		increasing abundance, but habitat suitability was also low in regions where
+		hummingbird abundance is highest. Still, hummingbird abundance at L.
+		cardinalis locations was generally higher than most congenerics, and L.
+		cardinalis tended to flower near the week of local peak A. colubris
+		abundance.
+
+		Conclusions While populations of hummingbird‐pollinated plant species may
+		require the local presence of hummingbirds, fine‐scale variation in
+		hummingbird abundance may not strongly influence their spatial distributions.
+	},
+	language     = {en}
+}
 
 
