Update back references

--- a/vignettes/articles/INPUBS.bib
+++ b/vignettes/articles/INPUBS.bib
@@ -1,13 +1,18 @@
 @phdthesis{wiethase_advancing_2023,
-	type         = {PhD thesis},
 	title        = {
 		Advancing ecosystem understanding: {Identifying} the drivers of habitat
 		degradation, species distributions and species vulnerabilities in {East}
 		{African} grasslands.
 	},
-	copyright    = {http://creativecommons.org/licenses/by-nc-nd/4.0/},
 	shorttitle   = {Advancing ecosystem understanding},
+	author       = {Wiethase, Joris Hendrik},
+	year         = 2023,
+	month        = dec,
 	url          = {https://etheses.whiterose.ac.uk/id/eprint/34736/},
+	urldate      = {2025-03-31},
+	copyright    = {http://creativecommons.org/licenses/by-nc-nd/4.0/},
+	note         = {Unpublished},
+	type         = {PhD thesis},
 	abstract     = {
 		Environments are changing at an accelerated rate, as a consequence of hu- man
 		activity. Many questions remain unanswered regarding the drivers of this
@@ -39,12 +44,7 @@
 		vulnerability metrics.
 	},
 	language     = {en},
-	urldate      = {2025-03-31},
-	school       = {University of York},
-	author       = {Wiethase, Joris Hendrik},
-	month        = dec,
-	year         = 2023,
-	note         = {Unpublished}
+	school       = {University of York}
 }
 @article{hattendorf_dirofilaria_2025,
 	title        = {
@@ -52,8 +52,12 @@
 		systematic literature review on vectors, host range, and the spatial
 		distribution in the 20th and 21st century
 	},
-	url          = {https://www.biorxiv.org/content/early/2025/02/18/2025.02.17.638693},
+	author       = {Hattendorf, Carolin and Lühken, Renke},
+	year         = 2025,
+	journal      = {bioRxiv},
 	doi          = {10.1101/2025.02.17.638693},
+	url          = {https://www.biorxiv.org/content/early/2025/02/18/2025.02.17.638693},
+	note         = {Publisher: Cold Spring Harbor Laboratory},
 	abstract     = {
 		Background Dirofilaria immitis and D. repens are mosquito-borne nematodes
 		with dogs as primary hosts, but other mammalian species including humans can
@@ -78,22 +82,18 @@
 		are made available open access, which will enable further analysis in the
 		future.Competing Interest StatementThe authors have declared no competing
 		interest.
-	},
-	journal      = {bioRxiv},
-	author       = {Hattendorf, Carolin and Lühken, Renke},
-	year         = 2025,
-	note         = {
-		Publisher: Cold Spring Harbor Laboratory
 	}
 }
 @phdthesis{salvador_baiges_clima_2024,
-	type         = {PhD Thesis},
 	title        = {
 		Clima, orografia i dinàmiques de poblament al {Pirineu} {Central}.
 		{Arqueologia}, {SIG} i modelització espacial del patró d'ocupació del
 		territori durant el {Neolític} (5700- 2100 cal {ANE})
 	},
+	author       = {Salvador Baiges, Guillem and Gassiot Ballbè, Ermengol (dir.)},
+	year         = 2024,
 	url          = {https://ddd.uab.cat/record/301073},
+	type         = {PhD Thesis},
 	abstract     = {
 		In recent decades, the Pyrenees have experienced an increase in
 		archaeological research that has made it possible to identify new sites with
@@ -132,8 +132,6 @@
 		Universitat Autònoma de Barcelona. Programa de Doctorat en Arqueologia
 		Prehistòrica
 	},
-	author       = {Salvador Baiges, Guillem and Gassiot Ballbè, Ermengol (dir.)},
-	year         = 2024,
 	keywords     = {
 		90, Arqueología del Paisaje, Arqueologia del Paisatge, Ciències Humanes, GIS,
 		Landscape archaeology, literature, Neolithic, Neolític, Neolítico, SIG, Tesi
@@ -145,12 +143,19 @@
 		Active management is required to regenerate the {Caledonian} forest:
 		{Alladale} as a case study
 	},
-	volume       = 5,
-	copyright    = {http://creativecommons.org/licenses/by-nc-nd/4.0/},
-	issn         = {2688-8319, 2688-8319},
 	shorttitle   = {Active management is required to regenerate the {Caledonian} forest},
-	url          = {https://besjournals.onlinelibrary.wiley.com/doi/10.1002/2688-8319.12315},
+	author       = {Williams, Jake and Sandom, Christopher J. and Pettorelli, Nathalie},
+	year         = 2024,
+	month        = jan,
+	journal      = {Ecological Solutions and Evidence},
+	volume       = 5,
+	number       = 1,
+	pages        = {e12315},
 	doi          = {10.1002/2688-8319.12315},
+	issn         = {2688-8319, 2688-8319},
+	url          = {https://besjournals.onlinelibrary.wiley.com/doi/10.1002/2688-8319.12315},
+	urldate      = {2025-03-31},
+	copyright    = {http://creativecommons.org/licenses/by-nc-nd/4.0/},
 	abstract     = {
 		Abstract
 
@@ -185,21 +190,22 @@
 		recovery approaches from those where specific active interventions are
 		needed.
 	},
-	language     = {en},
-	number       = 1,
-	urldate      = {2025-03-31},
-	journal      = {Ecological Solutions and Evidence},
-	author       = {Williams, Jake and Sandom, Christopher J. and Pettorelli, Nathalie},
-	month        = jan,
-	year         = 2024,
-	pages        = {e12315}
+	language     = {en}
 }
 @article{elio_medina_how_2025,
 	title        = {How to {Approach} the {Definition} of {WUI} in {Northern} {Europe}},
-	issn         = {0308-0501, 1099-1018},
 	shorttitle   = {How to {Approach} the {Definition} of {\textless}span style="font-variant},
-	url          = {https://onlinelibrary.wiley.com/doi/10.1002/fam.3264},
+	author       = {
+		Elio Medina, Javier and Plathner, Frida Vermina and Pastor, Elsa and
+		Fernandez‐Anez, Nieves
+	},
+	year         = 2025,
+	month        = jan,
+	journal      = {Fire and Materials},
 	doi          = {10.1002/fam.3264},
+	issn         = {0308-0501, 1099-1018},
+	url          = {https://onlinelibrary.wiley.com/doi/10.1002/fam.3264},
+	urldate      = {2025-03-31},
 	abstract     = {
 		ABSTRACT
 
@@ -213,25 +219,26 @@
 		buildings/km 2 threshold for building density fails to capture most wildfire
 		incidents that have led to building ignition.
 	},
-	language     = {en},
-	urldate      = {2025-03-31},
-	journal      = {Fire and Materials},
-	author       = {
-		Elio Medina, Javier and Plathner, Frida Vermina and Pastor, Elsa and
-		Fernandez‐Anez, Nieves
-	},
-	month        = jan,
-	year         = 2025
+	language     = {en}
 }
 @article{di_fabio_climatic_2024,
 	title        = {
 		Climatic conditions at provenance origin influence growth stability to
 		changes in climate in two major tree species
 	},
+	author       = {
+		Di Fabio, Alessandro and Buttò, Valentina and Chakraborty, Debojyoti and
+		O’Neill, Gregory A. and Schueler, Silvio and Kreyling, Juergen
+	},
+	year         = 2024,
+	month        = jul,
+	journal      = {Frontiers in Forests and Global Change},
 	volume       = 7,
+	pages        = 1422165,
+	doi          = {10.3389/ffgc.2024.1422165},
 	issn         = {2624-893X},
 	url          = {https://www.frontiersin.org/articles/10.3389/ffgc.2024.1422165/full},
-	doi          = {10.3389/ffgc.2024.1422165},
+	urldate      = {2025-03-31},
 	abstract     = {
 		Climate change is expected to outpace the rate at which populations of forest
 		trees can migrate. Hence, in forestry there is growing interest in
@@ -255,27 +262,30 @@
 		in different climate conditions, a measure of growth stability can improve
 		the choice of species and provenances to minimize future risks in forest
 		restoration and reforestation.
-	},
-	urldate      = {2025-03-31},
-	journal      = {Frontiers in Forests and Global Change},
-	author       = {
-		Di Fabio, Alessandro and Buttò, Valentina and Chakraborty, Debojyoti and
-		O’Neill, Gregory A. and Schueler, Silvio and Kreyling, Juergen
-	},
-	month        = jul,
-	year         = 2024,
-	pages        = 1422165
+	}
 }
 @article{nityagovsky_distribution_2024,
 	title        = {
 		Distribution of \textit{{Plasmopara} viticola} {Causing} {Downy} {Mildew} in
 		{Russian} {Far} {East} {Grapevines}
 	},
+	author       = {
+		Nityagovsky, Nikolay N. and Ananev, Alexey A. and Suprun, Andrey R. and
+		Ogneva, Zlata V. and Dneprovskaya, Alina A. and Tyunin, Alexey P. and
+		Dubrovina, Alexandra S. and Kiselev, Konstantin V. and Sanina, Nina M. and
+		Aleynova, Olga A.
+	},
+	year         = 2024,
+	month        = mar,
+	journal      = {Horticulturae},
 	volume       = 10,
-	copyright    = {https://creativecommons.org/licenses/by/4.0/},
+	number       = 4,
+	pages        = 326,
+	doi          = {10.3390/horticulturae10040326},
 	issn         = {2311-7524},
 	url          = {https://www.mdpi.com/2311-7524/10/4/326},
-	doi          = {10.3390/horticulturae10040326},
+	urldate      = {2025-03-31},
+	copyright    = {https://creativecommons.org/licenses/by/4.0/},
 	abstract     = {
 		Downy mildew is a severe disease that leads to significant losses in grape
 		yields worldwide. It is caused by the oomycete Plasmopara viticola. The study
@@ -307,19 +317,7 @@
 		P. viticola serves as a theoretical basis for the development of biocontrol
 		agents for grapevine downy mildew.
 	},
-	language     = {en},
-	number       = 4,
-	urldate      = {2025-03-31},
-	journal      = {Horticulturae},
-	author       = {
-		Nityagovsky, Nikolay N. and Ananev, Alexey A. and Suprun, Andrey R. and
-		Ogneva, Zlata V. and Dneprovskaya, Alina A. and Tyunin, Alexey P. and
-		Dubrovina, Alexandra S. and Kiselev, Konstantin V. and Sanina, Nina M. and
-		Aleynova, Olga A.
-	},
-	month        = mar,
-	year         = 2024,
-	pages        = 326
+	language     = {en}
 }
 @article{masson_systematic_2025,
 	title        = {
@@ -327,33 +325,40 @@
 		influence the scientific and societal interest in urban soil microbial
 		diversity
 	},
-	volume       = 20,
-	issn         = {2524-6372},
-	url          = {
-		https://environmentalmicrobiome.biomedcentral.com/articles/10.1186/s40793-025-00677-7
-	},
-	doi          = {10.1186/s40793-025-00677-7},
-	language     = {en},
-	number       = 1,
-	urldate      = {2025-03-31},
-	journal      = {Environmental Microbiome},
 	author       = {
 		Masson, Simon and Chialva, Matteo and Bongiovanni, Davide and Adamo, Martino
 		and Stefanini, Irene and Lanfranco, Luisa
 	},
-	month        = feb,
 	year         = 2025,
-	pages        = 17
+	month        = feb,
+	journal      = {Environmental Microbiome},
+	volume       = 20,
+	number       = 1,
+	pages        = 17,
+	doi          = {10.1186/s40793-025-00677-7},
+	issn         = {2524-6372},
+	url          = {
+		https://environmentalmicrobiome.biomedcentral.com/articles/10.1186/s40793-025-00677-7
+	},
+	urldate      = {2025-03-31},
+	language     = {en}
 }
 @article{buma_including_2024,
 	title        = {
 		Including non‐growing season emissions of {N}₂{O} in {US} maize could raise
 		net {CO}₂e emissions by 31\% annually
 	},
+	author       = {Buma, Brian},
+	year         = 2024,
+	month        = dec,
+	journal      = {Agricultural \& Environmental Letters},
 	volume       = 9,
+	number       = 2,
+	pages        = {e20146},
+	doi          = {10.1002/ael2.20146},
 	issn         = {2471-9625, 2471-9625},
 	url          = {https://acsess.onlinelibrary.wiley.com/doi/10.1002/ael2.20146},
-	doi          = {10.1002/ael2.20146},
+	urldate      = {2025-03-31},
 	abstract     = {
 		Abstract
 
@@ -396,14 +401,7 @@
 		biofuels, because if we are missing a lot of the greenhouse gas emissions we
 		may make the wrong decisions about policy and management.
 	},
-	language     = {en},
-	number       = 2,
-	urldate      = {2025-03-31},
-	journal      = {Agricultural \& Environmental Letters},
-	author       = {Buma, Brian},
-	month        = dec,
-	year         = 2024,
-	pages        = {e20146}
+	language     = {en}
 }
 @article{garcia-alvarado_assessing_2025,
 	title        = {
@@ -411,11 +409,22 @@
 		\textit{{Pluchea} ovalis} ({Pers}.) {DC}. ({Asteraceae}) in the {Canarian}
 		{Archipelago} {Using} an {Ensemble} of {Species} {Distribution} {Modelling}
 	},
+	author       = {
+		García-Alvarado, Juan José and Pestano-González, Miguel and
+		González-Montelongo, Cristina and Naranjo-Cigala, Agustín and Arévalo, José
+		Ramón
+	},
+	year         = 2025,
+	month        = mar,
+	journal      = {Diversity},
 	volume       = 17,
-	copyright    = {https://creativecommons.org/licenses/by/4.0/},
+	number       = 3,
+	pages        = 195,
+	doi          = {10.3390/d17030195},
 	issn         = {1424-2818},
 	url          = {https://www.mdpi.com/1424-2818/17/3/195},
-	doi          = {10.3390/d17030195},
+	urldate      = {2025-03-31},
+	copyright    = {https://creativecommons.org/licenses/by/4.0/},
 	abstract     = {
 		Invasive species represent a significant threat to biodiversity and ecosystem
 		conservation, with their impacts often amplified in island ecosystems.
@@ -437,18 +446,7 @@
 		gained by the species in places where they are currently not present,
 		revealing new suitable sectors in the westernmost islands.
 	},
-	language     = {en},
-	number       = 3,
-	urldate      = {2025-03-31},
-	journal      = {Diversity},
-	author       = {
-		García-Alvarado, Juan José and Pestano-González, Miguel and
-		González-Montelongo, Cristina and Naranjo-Cigala, Agustín and Arévalo, José
-		Ramón
-	},
-	month        = mar,
-	year         = 2025,
-	pages        = 195
+	language     = {en}
 }
 @article{wang_relationship_2025,
 	title        = {
@@ -456,9 +454,17 @@
 		{Soil} {Enzymes} {Activities} in {Various} {Land} {Use} {Types} in the
 		{Upper} {Watershed} of {Danjiangkou} {Reservoir} in {China}
 	},
+	author       = {
+		Wang, Guangyu and Tang, Xiaofeng and Zhang, Qingwei and Li, Bingcong and Li,
+		Ming
+	},
+	year         = 2025,
+	month        = feb,
+	journal      = {Land Degradation \& Development},
+	doi          = {10.1002/ldr.5516},
 	issn         = {1085-3278, 1099-145X},
 	url          = {https://onlinelibrary.wiley.com/doi/10.1002/ldr.5516},
-	doi          = {10.1002/ldr.5516},
+	urldate      = {2025-03-19},
 	abstract     = {
 		ABSTRACT Soil organic matter (SOM) was the primary component of the global
 		terrestrial carbon sink. Soil enzymes were important drivers of soil
@@ -486,26 +492,28 @@
 		enzymes in various land uses was probably related to the proportion of
 		nitrogen‐containing compounds, polysaccharides, and terpenoids in SOM.
 	},
-	language     = {en},
-	urldate      = {2025-03-19},
-	journal      = {Land Degradation \& Development},
-	author       = {
-		Wang, Guangyu and Tang, Xiaofeng and Zhang, Qingwei and Li, Bingcong and Li,
-		Ming
-	},
-	month        = feb,
-	year         = 2025
+	language     = {en}
 }
 @article{su_high_2025,
 	title        = {
 		High {Diversity} and {Low} {Genetic} {Differentiation} {Among} {Geographic}
 		{Populations} of \textit{{Myotis} yumanensis} in {Western} {Canada}
 	},
+	author       = {
+		Su, Xingyuan and Popescu, Nicolas and Insuk, Chadabhorn and Lausen, Cori and
+		Xu, Jianping
+	},
+	year         = 2025,
+	month        = feb,
+	journal      = {Animals},
 	volume       = 15,
-	copyright    = {https://creativecommons.org/licenses/by/4.0/},
+	number       = 4,
+	pages        = 578,
+	doi          = {10.3390/ani15040578},
 	issn         = {2076-2615},
 	url          = {https://www.mdpi.com/2076-2615/15/4/578},
-	doi          = {10.3390/ani15040578},
+	urldate      = {2025-03-19},
+	copyright    = {https://creativecommons.org/licenses/by/4.0/},
 	abstract     = {
 		Myotis yumanensis is a small insectivorous bat distributed in Western North
 		America and is susceptible to white-nose syndrome, a devastating fungal
@@ -528,26 +536,24 @@
 		develop effective management strategies for protecting this bat species from
 		white-nose syndrome.
 	},
-	language     = {en},
-	number       = 4,
-	urldate      = {2025-03-19},
-	journal      = {Animals},
-	author       = {
-		Su, Xingyuan and Popescu, Nicolas and Insuk, Chadabhorn and Lausen, Cori and
-		Xu, Jianping
-	},
-	month        = feb,
-	year         = 2025,
-	pages        = 578
+	language     = {en}
 }
 @article{varma_socio-economic_2025,
 	title        = {
 		Socio-economic factors constrain climate change adaptation in a tropical
 		export crop
 	},
+	author       = {
+		Varma, Varun and Mosedale, Jonathan R. and Alvarez, José Antonio Guzmán and
+		Bebber, Daniel P.
+	},
+	year         = 2025,
+	month        = mar,
+	journal      = {Nature Food},
+	doi          = {10.1038/s43016-025-01130-1},
 	issn         = {2662-1355},
 	url          = {https://www.nature.com/articles/s43016-025-01130-1},
-	doi          = {10.1038/s43016-025-01130-1},
+	urldate      = {2025-03-19},
 	abstract     = {
 		Abstract Climate change will alter the geographical locations most suited for
 		crop production, but adaptation to these new conditions may be constrained by
@@ -565,27 +571,19 @@
 		export banana production, along with yield declines in most current banana
 		producing areas.
 	},
-	language     = {en},
-	urldate      = {2025-03-19},
-	journal      = {Nature Food},
-	author       = {
-		Varma, Varun and Mosedale, Jonathan R. and Alvarez, José Antonio Guzmán and
-		Bebber, Daniel P.
-	},
-	month        = mar,
-	year         = 2025
+	language     = {en}
 }
 @misc{lindgren_inlabru_2024,
 	title        = {
 		{inlabru}: software for fitting latent {Gaussian} models with non-linear
 		predictors
 	},
-	url          = {https://arxiv.org/abs/2407.00791},
 	author       = {
 		Lindgren, Finn and Bachl, Fabian and Illian, Janine and Suen, Man Ho and Rue,
 		Håvard and Seaton, Andrew E.
 	},
 	year         = 2024,
+	url          = {https://arxiv.org/abs/2407.00791},
 	note         = {\_eprint: 2407.00791}
 }
 @article{kutza_endemic_2025,
@@ -593,8 +591,15 @@
 		Endemic and invasion dynamics of wild tomato species on the {Galápagos}
 		{Islands}, across two centuries of collection records
 	},
-	url          = {https://www.biorxiv.org/content/early/2025/01/11/2025.01.09.632230},
+	author       = {Kutza, Alex D. and Hert, Zoe L. and Moyle, Leonie C.},
+	year         = 2025,
+	journal      = {bioRxiv},
 	doi          = {10.1101/2025.01.09.632230},
+	url          = {https://www.biorxiv.org/content/early/2025/01/11/2025.01.09.632230},
+	note         = {
+		Publisher: Cold Spring Harbor Laboratory \_eprint:
+		https://www.biorxiv.org/content/early/2025/01/11/2025.01.09.632230.full.pdf
+	},
 	abstract     = {
 		We aggregated digitized herbarium and other collection records—spanning
 		\&gt;225 years since 1795—to assess the biological, geographical, and
@@ -618,13 +623,6 @@
 		shaping species distributions on high-endemism islands with recent rapid
 		environmental change.Competing Interest StatementThe authors have declared no
 		competing interest.
-	},
-	journal      = {bioRxiv},
-	author       = {Kutza, Alex D. and Hert, Zoe L. and Moyle, Leonie C.},
-	year         = 2025,
-	note         = {
-		Publisher: Cold Spring Harbor Laboratory \_eprint:
-		https://www.biorxiv.org/content/early/2025/01/11/2025.01.09.632230.full.pdf
 	}
 }
 @article{luhken_high_2024,
@@ -632,12 +630,23 @@
 		High vector competence for chikungunya virus but heavily reduced locomotor
 		activity of \textit{{Aedes} albopictus} from {Germany} at low temperatures
 	},
+	author       = {
+		Lühken, Renke and Rauhöft, Leif and Pluskota, Björn and Lange, Unchana and
+		Helms, Michelle and Becker, Norbert and Schmidt-Chanasit, Jonas and Kuhn,
+		Carola and Tannich, Egbert and Jansen, Stephanie and Heitmann, Anna
+	},
+	year         = 2024,
+	month        = dec,
+	journal      = {Parasites \& Vectors},
 	volume       = 17,
+	number       = 1,
+	pages        = 502,
+	doi          = {10.1186/s13071-024-06594-x},
 	issn         = {1756-3305},
 	url          = {
 		https://parasitesandvectors.biomedcentral.com/articles/10.1186/s13071-024-06594-x
 	},
-	doi          = {10.1186/s13071-024-06594-x},
+	urldate      = {2025-03-19},
 	abstract     = {
 		Abstract Background The incidence of human infections caused by
 		arthropod-borne viruses, such as the chikungunya virus (CHIKV), has increased
@@ -672,28 +681,25 @@
 		needed to validate these laboratory findings under field conditions.
 		Graphical abstract
 	},
-	language     = {en},
-	number       = 1,
-	urldate      = {2025-03-19},
-	journal      = {Parasites \& Vectors},
-	author       = {
-		Lühken, Renke and Rauhöft, Leif and Pluskota, Björn and Lange, Unchana and
-		Helms, Michelle and Becker, Norbert and Schmidt-Chanasit, Jonas and Kuhn,
-		Carola and Tannich, Egbert and Jansen, Stephanie and Heitmann, Anna
-	},
-	month        = dec,
-	year         = 2024,
-	pages        = 502
+	language     = {en}
 }
 @article{mallory_mercury_2025,
 	title        = {
 		Mercury in eastern coyotes from {Nova} {Scotia}, {Canada}: {Effects} of
 		geography and trophic position
 	},
+	author       = {
+		Mallory, Mark L. and MacLean, Seth and Baak, Julia E. and Boudreau, Michael
+		and Priest, Jenna M. and Morrill, André and Provencher, Jennifer F. and
+		O'Driscoll, Nelson J.
+	},
+	year         = 2025,
+	journal      = {Science of The Total Environment},
 	volume       = 974,
+	pages        = 179186,
+	doi          = {10.1016/j.scitotenv.2025.179186},
 	issn         = {0048-9697},
 	url          = {https://www.sciencedirect.com/science/article/pii/S0048969725008216},
-	doi          = {10.1016/j.scitotenv.2025.179186},
 	abstract     = {
 		Mercury (Hg) is a global environmental concern due to its wide distribution
 		and myriad of deleterious effects on biota. We studied hepatic Hg in a
@@ -709,17 +715,8 @@
 		and for which trophic position and Hg concentrations were surprisingly high
 		at smaller scales within Nova Scotia.
 	},
-	journal      = {Science of The Total Environment},
-	author       = {
-		Mallory, Mark L. and MacLean, Seth and Baak, Julia E. and Boudreau, Michael
-		and Priest, Jenna M. and Morrill, André and Provencher, Jennifer F. and
-		O'Driscoll, Nelson J.
-	},
-	year         = 2025,
-	keywords     = {Beaver, Biomagnification, Fisher, Hepatic, Methylmercury, Otter},
-	pages        = 179186
+	keywords     = {Beaver, Biomagnification, Fisher, Hepatic, Methylmercury, Otter}
 }
-
 @article{williams_ecosystem_2025,
 	title        = {
 		Ecosystem condition emerges from an ecological equation of state applied to
@@ -844,5 +841,46 @@
 	},
 	language     = {en}
 }
-
-
+@article{https://doi.org/10.1002/ece3.71137,
+	title        = {
+		{Mapping the Missing: Assessing Amphibian Sampling Completeness and Overlap
+		With Global Protected Areas}
+	},
+	author       = {Herrera-Lopera, Jorge Mario and Solé, Mirco and Cultid-Medina, Carlos A.},
+	year         = 2025,
+	journal      = {Ecology and Evolution},
+	volume       = 15,
+	number       = 5,
+	pages        = {e71137},
+	doi          = {10.1002/ece3.71137},
+	url          = {https://onlinelibrary.wiley.com/doi/abs/10.1002/ece3.71137},
+	note         = {e71137 ECE-2024-11-02402.R1},
+	keywords     = {
+		amphibian conservation, distribution data gaps, key biodiversity areas,
+		natural protected areas, research prioritization, sampling completeness
+	},
+	eprint       = {https://onlinelibrary.wiley.com/doi/pdf/10.1002/ece3.71137},
+	abstract     = {
+		ABSTRACT The aim of the study was to assess amphibian sampling completeness
+		and the overlap of sampling completeness categories with natural protected
+		areas (NPAs) and key biodiversity areas (KBAs) at global scale. We evaluated
+		amphibian sampling completeness across six of the earth's eight biogeographic
+		realms to identify well-sampled, under-sampled, and data-gap areas in the
+		context of global amphibian distribution. Additionally, we examined the
+		spatial overlap of each sampling category with NPAs and KBAs. The Nearctic
+		and Australasian realms had the highest number of records and well-sampled
+		areas. Significant data gaps were identified, particularly in the
+		Afrotropical, Indo-Malayan, Neotropical, and Palearctic realms. We found low
+		levels of spatial match (< 35\%) between classified areas and NPAs/KBAs.
+		Amphibian distribution data are largely incomplete, with the most extensive
+		gaps in the most species-rich realms: Neotropic, Indo-Malayan, and
+		Afrotropical. The low overlap between under-sampled and data-gap areas with
+		NPAs and KBAs suggests that these regions, critical for amphibian diversity,
+		are insufficiently represented within established conservation priorities.
+		Given the urgent threats to biodiversity from global change, rapid responses
+		are essential to enhance our understanding of species distributions and
+		community structures in amphibians. This study provides spatial insights to
+		help identify key data-gap areas for amphibian research and conservation
+		prioritization.
+	}
+}
